--- a/tables_and_figures/output/primary_secondary_rmse_by_year.tex
+++ b/tables_and_figures/output/primary_secondary_rmse_by_year.tex
@@ -4,37 +4,37 @@
 \caption{Primary vs Secondary Variable RMSE by Year (2008--2022)}
 \label{tab:primary_secondary_rmse_by_year}
 \begin{threeparttable}
-\begin{tabular}{lccccccccc}
+\begin{tabular}{lcccccccccc}
 \toprule
-Variable & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Mean \\
+Variable & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Mean & SD \\
 \midrule
-\multicolumn{10}{l}{\textit{Primary Variables (used in CES weighting)}} \\
+\multicolumn{11}{l}{\textit{Primary Variables -- Used to Construct CES Weights}} \\
 \addlinespace[0.2em]
-~~Age Group & 3.3 & 4.8 & 2.8 & 2.8 & 2.6 & 4.0 & 4.7 & 5.2 & 3.8 \\
-~~Education & 3.3 & 6.1 & 3.5 & 3.9 & 5.7 & 4.4 & 4.5 & 3.8 & 4.4 \\
-~~Sex & 6.8 & 5.0 & 1.5 & 2.0 & 1.3 & 2.9 & 2.5 & 3.1 & 3.1 \\
+~~Age Group & 3.3 & 4.8 & 2.8 & 2.8 & 2.6 & 4.0 & 4.7 & 5.2 & 3.8 & 1.0 \\
+~~Education & 3.3 & 6.1 & 3.5 & 3.9 & 5.7 & 4.4 & 4.5 & 3.8 & 4.4 & 1.0 \\
+~~Sex & 6.8 & 5.0 & 1.5 & 2.0 & 1.3 & 2.9 & 2.5 & 3.1 & 3.1 & 1.7 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont Primary Avg.} & 4.4 & 5.3 & 2.6 & 2.9 & 3.2 & 3.8 & 3.9 & 4.0 & {\fontseries{sb}\selectfont 3.8} \\
+~~\textbf{Primary Avg.} & \textbf{4.4} & \textbf{5.3} & \textbf{2.6} & \textbf{2.9} & \textbf{3.2} & \textbf{3.8} & \textbf{3.9} & \textbf{4.0} & \textbf{3.8} & \textbf{0.8} \\
 \addlinespace[0.3em]
-\multicolumn{10}{l}{\textit{Secondary Variables (not used in CES weighting)}} \\
+\multicolumn{11}{l}{\textit{Secondary Variables -- Not Used to Construct CES Weights}} \\
 \addlinespace[0.2em]
-~~Employment Status & 10.3 & 10.6 & 13.5 & 11.5 & 12.0 & 12.2 & 12.4 & 10.1 & 11.6 \\
-~~Family Income & 3.5 & 3.9 & 3.9 & 4.4 & 4.9 & 5.3 & 6.8 & 8.8 & 5.2 \\
-~~State Representative & 4.8 & 5.4 & 6.4 & 6.3 & 6.5 & 11.2 & 9.0 & 9.1 & 7.3 \\
-~~State Senator & 5.6 & 9.6 & 7.4 & 13.4 & 8.0 & 4.7 & 6.6 & 10.1 & 8.2 \\
-~~U.S. House & 9.4 & 11.4 & 9.8 & 9.0 & 9.6 & 9.5 & 8.0 & 10.1 & 9.6 \\
-~~Union Membership & 3.7 & 5.8 & 6.0 & 5.2 & 5.3 & 5.9 & 6.4 & 5.4 & 5.5 \\
-~~Veteran Status & 4.3 & 4.8 & 4.0 & 4.3 & 3.8 & 2.7 & 2.6 & 2.8 & 3.7 \\
-~~Voting Method & 4.3 & 6.0 & 4.5 & 3.4 & 5.4 & 5.0 & 6.7 & 6.0 & 5.2 \\
+~~Employment Status & 10.3 & 10.6 & 13.5 & 11.5 & 12.0 & 12.2 & 12.4 & 10.1 & 11.6 & 1.1 \\
+~~Family Income & 3.5 & 3.9 & 3.9 & 4.4 & 4.9 & 5.3 & 6.8 & 8.8 & 5.2 & 1.7 \\
+~~State Representative & 4.8 & 5.4 & 6.4 & 6.3 & 6.5 & 11.2 & 9.0 & 9.1 & 7.3 & 2.0 \\
+~~State Senator & 5.6 & 9.6 & 7.4 & 13.4 & 8.0 & 4.7 & 6.6 & 10.1 & 8.2 & 2.6 \\
+~~U.S. House & 9.4 & 11.4 & 9.8 & 9.0 & 9.6 & 9.5 & 8.0 & 10.1 & 9.6 & 0.9 \\
+~~Union Membership & 3.7 & 5.8 & 6.0 & 5.2 & 5.3 & 5.9 & 6.4 & 5.4 & 5.5 & 0.8 \\
+~~Veteran Status & 4.3 & 4.8 & 4.0 & 4.3 & 3.8 & 2.7 & 2.6 & 2.8 & 3.7 & 0.8 \\
+~~Voting Method & 4.3 & 6.0 & 4.5 & 3.4 & 5.4 & 5.0 & 6.7 & 6.0 & 5.2 & 1.0 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont Secondary Avg.} & 5.7 & 7.2 & 6.9 & 7.2 & 6.9 & 7.1 & 7.3 & 7.8 & {\fontseries{sb}\selectfont 7.0} \\
+~~\textbf{Secondary Avg.} & \textbf{5.7} & \textbf{7.2} & \textbf{6.9} & \textbf{7.2} & \textbf{6.9} & \textbf{7.1} & \textbf{7.3} & \textbf{7.8} & \textbf{7.0} & \textbf{0.5} \\
 \midrule
-\textbf{$\Delta$ (Secondary $-$ Primary)} & +1.3 & +1.9 & +4.3 & +4.3 & +3.7 & +3.3 & +3.4 & +3.8 & {\textbf{+3.3}} \\
+\textbf{$\Delta$ (Secondary $-$ Primary)} & +1.3 & +1.9 & +4.3 & +4.3 & +3.7 & +3.3 & +3.4 & +3.8 & \textbf{+3.3} & \textbf{1.0} \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} All values are RMSE in percentage points. Variables must be consistently Primary or Secondary and present in all years 2008--2022.
+\item \textit{Note:} 2006 is excluded because the CES does not report post-stratification variables for that year, making it impossible to classify variables consistently as primary or secondary. Variables listed are those that were consistently classified as primary or secondary in every CES wave from 2008 to 2022. Mean and SD are computed across years for each variable.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
