--- a/tables_and_figures/output/rmse_ces_weighted_all.tex
+++ b/tables_and_figures/output/rmse_ces_weighted_all.tex
@@ -4,55 +4,54 @@
 \caption{Matching + Post-Stratification RMSE by Variable and Year}
 \label{tab:rmse_ces_weighted_all}
 \begin{threeparttable}
-\begin{tabular}{lcccccccccc}
+\begin{tabular}{lccccccccccc}
 \midrule
 \midrule
-Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Yearly Mean \\
+Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Mean & SD \\
 \midrule
-\multicolumn{11}{l}{\textit{Demographic}} \\
+\multicolumn{12}{l}{\textit{Demographic}} \\
 \addlinespace[0.2em]
-~~Age Group & 6.9 & 3.3\dag & 4.8\dag & 2.8\dag & 2.8\dag & 2.6\dag & 4.0\dag & 4.7\dag & 5.2\dag & 4.1 \\
-~~Sex & 5.2 & 6.8\dag & 5.0\dag & 1.5\dag & 2.0\dag & 1.3\dag & 2.9\dag & 2.5\dag & 3.1\dag & 3.4 \\
-~~Hispanic Origin & - & - & 7.6 & 8.1 & 7.5 & 7.6 & 7.8 & 7.0 & 2.7 & 6.9 \\
-~~Education & 13.0 & 3.3\dag & 6.1\dag & 3.5\dag & 3.9\dag & 5.7\dag & 4.4\dag & 4.5\dag & 3.8\dag & 5.3 \\
-~~Family Income & 4.5 & 3.5 & 3.9 & 3.9 & 4.4 & 4.9 & 5.3 & 6.8 & 8.8 & 5.1 \\
-~~Employment Status & 7.0 & 10.3 & 10.6 & 13.5 & 11.5 & 12.0 & 12.2 & 12.4 & 10.1 & 11.1 \\
-~~Union Membership & 5.4 & 3.7 & 5.8 & 6.0 & 5.2 & 5.3 & 5.9 & 6.4 & 5.4 & 5.4 \\
-~~Veteran Status & 4.6 & 4.3 & 4.8 & 4.0 & 4.3 & 3.8 & 2.7 & 2.6 & 2.8 & 3.8 \\
-~~Residence Duration & - & 6.9 & 7.4 & 4.9 & 4.7 & 5.0 & - & 4.4 & - & 5.5 \\
+~~Age Group & 6.9 & 3.3\dag & 4.8\dag & 2.8\dag & 2.8\dag & 2.6\dag & 4.0\dag & 4.7\dag & 5.2\dag & 4.1 & 1.4 \\
+~~Sex & 5.2 & 6.8\dag & 5.0\dag & 1.5\dag & 2.0\dag & 1.3\dag & 2.9\dag & 2.5\dag & 3.1\dag & 3.4 & 1.9 \\
+~~Hispanic Origin & - & - & 7.6 & 8.1 & 7.5 & 7.6 & 7.8 & 7.0 & 2.7 & 6.9 & 1.9 \\
+~~Education & 13.0 & 3.3\dag & 6.1\dag & 3.5\dag & 3.9\dag & 5.7\dag & 4.4\dag & 4.5\dag & 3.8\dag & 5.3 & 3.0 \\
+~~Family Income & 4.5 & 3.5 & 3.9 & 3.9 & 4.4 & 4.9 & 5.3 & 6.8 & 8.8 & 5.1 & 1.7 \\
+~~Employment Status & 7.0 & 10.3 & 10.6 & 13.5 & 11.5 & 12.0 & 12.2 & 12.4 & 10.1 & 11.1 & 1.9 \\
+~~Union Membership & 5.4 & 3.7 & 5.8 & 6.0 & 5.2 & 5.3 & 5.9 & 6.4 & 5.4 & 5.4 & 0.8 \\
+~~Veteran Status & 4.6 & 4.3 & 4.8 & 4.0 & 4.3 & 3.8 & 2.7 & 2.6 & 2.8 & 3.8 & 0.8 \\
+~~Residence Duration & - & 6.9 & 7.4 & 4.9 & 4.7 & 5.0 & - & 4.4 & - & 5.5 & 1.3 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont\textcolor{black!85}{~~Demographic Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.6}} \\
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Demographic Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{1.6}} \\
 \addlinespace[0.3em]
-\multicolumn{11}{l}{\textit{Voting Administration}} \\
+\multicolumn{12}{l}{\textit{Voting Administration}} \\
 \addlinespace[0.2em]
-~~Voting Turnout & 43.8 & 26.0\dag & 31.6\dag & 38.7\dag & 47.2 & 36.7 & 35.1 & 26.5 & 48.1 & 37.1 \\
-~~Voting Method & 3.7 & 4.3 & 6.0 & 4.5 & 3.4 & 5.4 & 5.0 & 6.7 & 6.0 & 5.0 \\
+~~Voting Turnout & 43.8 & 26.0\dag & 31.6\dag & 38.7\dag & 47.2 & 36.7 & 35.1 & 26.5 & 48.1 & 37.1 & 8.2 \\
+~~Voting Method & 3.7 & 4.3 & 6.0 & 4.5 & 3.4 & 5.4 & 5.0 & 6.7 & 6.0 & 5.0 & 1.1 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont\textcolor{black!85}{~~Voting Administration Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{23.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{15.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{18.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{25.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{20.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{16.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{27.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.0}} \\
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Voting Administration Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{23.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{15.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{18.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{25.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{20.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{16.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{27.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{4.7}} \\
 \addlinespace[0.3em]
-\multicolumn{11}{l}{\textit{Candidate Choice}} \\
+\multicolumn{12}{l}{\textit{Candidate Choice}} \\
 \addlinespace[0.2em]
-~~President & * & 3.5 & * & 2.9 & * & 1.7 & * & 2.4\dag & * & 2.6 \\
-~~U.S. Senate & 13.7 & 9.9 & 5.2 & 2.2 & 6.3\dag & 4.0\dag & 8.5\dag & 5.5\dag & 7.4\dag & 7.0 \\
-~~U.S. House & 4.9 & 9.4 & 11.4 & 9.8 & 9.0 & 9.6 & 9.5 & 8.0 & 10.1 & 9.1 \\
-~~Governor & 5.0 & 4.7 & 3.5 & 3.4 & 3.6\dag & 4.0\dag & 4.5\dag & 4.3\dag & 5.7\dag & 4.3 \\
-~~Attorney General & 13.3 & - & 11.8 & 15.1 & 8.0 & 4.9 & 4.8 & 3.5 & 7.6 & 8.6 \\
-~~Secretary of State & 11.2 & - & 6.4 & 10.9 & 8.3 & 9.6 & 4.2 & 3.6 & 6.5 & 7.6 \\
-~~State Senator & 10.7 & 5.6 & 9.6 & 7.4 & 13.4 & 8.0 & 4.7 & 6.6 & 10.1 & 8.5 \\
-~~State Representative & 7.3 & 4.8 & 5.4 & 6.4 & 6.3 & 6.5 & 11.2 & 9.0 & 9.1 & 7.3 \\
+~~President & * & 3.5 & * & 2.9 & * & 1.7 & * & 2.4\dag & * & 2.6 & 0.8 \\
+~~U.S. Senate & 13.7 & 9.9 & 5.2 & 2.2 & 6.3\dag & 4.0\dag & 8.5\dag & 5.5\dag & 7.4\dag & 7.0 & 3.4 \\
+~~U.S. House & 4.9 & 9.4 & 11.4 & 9.8 & 9.0 & 9.6 & 9.5 & 8.0 & 10.1 & 9.1 & 1.8 \\
+~~Governor & 5.0 & 4.7 & 3.5 & 3.4 & 3.6\dag & 4.0\dag & 4.5\dag & 4.3\dag & 5.7\dag & 4.3 & 0.8 \\
+~~Attorney General & 13.3 & - & 11.8 & 15.1 & 8.0 & 4.9 & 4.8 & 3.5 & 7.6 & 8.6 & 4.3 \\
+~~Secretary of State & 11.2 & - & 6.4 & 10.9 & 8.3 & 9.6 & 4.2 & 3.6 & 6.5 & 7.6 & 2.9 \\
+~~State Senator & 10.7 & 5.6 & 9.6 & 7.4 & 13.4 & 8.0 & 4.7 & 6.6 & 10.1 & 8.5 & 2.8 \\
+~~State Representative & 7.3 & 4.8 & 5.4 & 6.4 & 6.3 & 6.5 & 11.2 & 9.0 & 9.1 & 7.3 & 2.0 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{9.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.2}} \\
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{9.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{2.3}} \\
 \midrule
-\textbf{Yearly RMSE} & \textbf{10.0} & \textbf{6.9} & \textbf{8.2} & \textbf{7.9} & \textbf{8.4} & \textbf{7.3} & \textbf{7.8} & \textbf{6.7} & \textbf{9.0} & \textbf{8.0} \\
+\textbf{Yearly RMSE} & \textbf{10.0} & \textbf{6.9} & \textbf{8.2} & \textbf{7.9} & \textbf{8.4} & \textbf{7.3} & \textbf{7.8} & \textbf{6.7} & \textbf{9.0} & \textbf{8.0} & \textbf{1.0} \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
 \item \dag~indicates Primary variables (used in CES post-stratification weighting for that year).
-\item * Office not on ballot that year.
-\item - CES did not measure vote choice for that office that year.
-\item \textit{2006 Note:} CES 2006 documentation does not specify which variables were used for post-stratification. We assume all variables are Secondary for this year, though this is likely incorrect given that weights were provided.
-\item \textit{Note:} All values are RMSE in percentage points. Yearly Mean shows the row-wise average across all years.
+\item * indicates office not on ballot that year.
+\item - indicates CES did not measure vote choice for that office that year.
+\item \textit{Note:} Means and standard deviations are computed across years for each variable.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
