added new views for anesrake delta

--- a/tables_and_figures/output/ces_comparison.tex
+++ b/tables_and_figures/output/ces_comparison.tex
@@ -4,23 +4,23 @@
 \caption{CES-Reported RMSEs vs. RMSEs Calculated in This Study}
 \label{tab:ces_comparison}
 \begin{threeparttable}
-\begin{tabular}{lccccccccccccccc}
+\begin{tabular}{lcccccccccccccccccc}
 \toprule
- & \multicolumn{3}{c}{President} & \multicolumn{3}{c}{Governor} & \multicolumn{3}{c}{U.S. Senate} & \multicolumn{3}{c}{Attorney General} & \multicolumn{3}{c}{Secretary of State} \\
-\cmidrule(lr){2-4} \cmidrule(lr){5-7} \cmidrule(lr){8-10} \cmidrule(lr){11-13} \cmidrule(lr){14-16}
-Year & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ \\
+ & \multicolumn{3}{c}{President} & \multicolumn{3}{c}{Governor} & \multicolumn{3}{c}{U.S. Senate} & \multicolumn{3}{c}{Attorney General} & \multicolumn{3}{c}{Secretary of State} & \multicolumn{3}{c}{Year Mean} \\
+\cmidrule(lr){2-4} \cmidrule(lr){5-7} \cmidrule(lr){8-10} \cmidrule(lr){11-13} \cmidrule(lr){14-16} \cmidrule(lr){17-19}
+Year & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ & Study & CES & $\Delta$ \\
 \midrule
-2006 & - & - & - & 5.0 & 2.2 & +2.7 & 13.7 & 4.3 & +9.5 & 13.3 & 4.3 & +9.0 & 11.2 & 4.4 & +6.8 \\
-2008 & 3.5 & 2.4 & +1.1 & 4.7 & 3.2 & +1.4 & 9.9 & - & - & - & - & - & - & - & - \\
-2010 & - & - & - & 3.5 & 2.2 & +1.3 & 5.2 & 1.3 & +3.9 & 11.8 & 5.0 & +6.8 & 6.4 & 4.5 & +1.9 \\
-2012 & 2.9 & 3.3 & -0.4 & 3.4 & - & - & 2.2 & 3.7 & -1.4 & 15.1 & 16.9 & -1.7 & 10.9 & 9.9 & +1.0 \\
-2014 & - & - & - & 3.6 & 4.0 & -0.4 & 6.3 & 3.4 & +3.0 & 8.0 & - & - & 8.3 & - & - \\
-2016 & 1.7 & 1.6 & +0.1 & 4.0 & 4.0 & -0.1 & 4.0 & 7.4 & -3.4 & 4.9 & - & - & 9.6 & - & - \\
-2018 & - & - & - & 4.5 & 4.1 & +0.4 & 8.5 & 4.9 & +3.6 & 4.8 & - & - & 4.2 & 3.4 & +0.8 \\
-2020 & 2.4 & - & - & 4.3 & 1.9 & +2.4 & 5.5 & - & - & 3.5 & 1.9 & +1.6 & 3.6 & 5.3 & -1.7 \\
-2022 & - & - & - & 5.7 & - & - & 7.4 & 2.4 & +4.9 & 7.6 & 3.1 & +4.4 & 6.5 & 4.4 & +2.1 \\
+2006 & - & - & - & 5.0 & 2.2 & +2.7 & 13.7 & 4.3 & +9.5 & 13.3 & 4.3 & +9.0 & 11.2 & 4.4 & +6.8 & 10.8 & 3.8 & +7.0 \\
+2008 & 3.5 & 2.4 & +1.1 & 4.7 & 3.2 & +1.4 & 9.9 & - & - & - & - & - & - & - & - & 6.0 & 2.8 & +1.3 \\
+2010 & - & - & - & 3.5 & 2.2 & +1.3 & 5.2 & 1.3 & +3.9 & 11.8 & 5.0 & +6.8 & 6.4 & 4.5 & +1.9 & 6.7 & 3.3 & +3.5 \\
+2012 & 2.9 & 3.3 & -0.4 & 3.4 & - & - & 2.2 & 3.7 & -1.4 & 15.1 & 16.9 & -1.7 & 10.9 & 9.9 & +1.0 & 6.9 & 8.4 & -0.6 \\
+2014 & - & - & - & 3.6 & 4.0 & -0.4 & 6.3 & 3.4 & +3.0 & 8.0 & - & - & 8.3 & - & - & 6.5 & 3.7 & +1.3 \\
+2016 & 1.7 & 1.6 & +0.1 & 4.0 & 4.0 & -0.1 & 4.0 & 7.4 & -3.4 & 4.9 & - & - & 9.6 & - & - & 4.9 & 4.3 & -1.1 \\
+2018 & - & - & - & 4.5 & 4.1 & +0.4 & 8.5 & 4.9 & +3.6 & 4.8 & - & - & 4.2 & 3.4 & +0.8 & 5.5 & 4.1 & +1.6 \\
+2020 & 2.4 & - & - & 4.3 & 1.9 & +2.4 & 5.5 & - & - & 3.5 & 1.9 & +1.6 & 3.6 & 5.3 & -1.7 & 3.9 & 3.1 & +0.8 \\
+2022 & - & - & - & 5.7 & - & - & 7.4 & 2.4 & +4.9 & 7.6 & 3.1 & +4.4 & 6.5 & 4.4 & +2.1 & 6.8 & 3.3 & +3.8 \\
 \midrule
-\textbf{Mean} & \textbf{2.6} & \textbf{2.4} & \textbf{+0.3} & \textbf{4.3} & \textbf{3.1} & \textbf{+1.1} & \textbf{7.0} & \textbf{3.9} & \textbf{+2.9} & \textbf{8.6} & \textbf{6.3} & \textbf{+4.0} & \textbf{7.6} & \textbf{5.3} & \textbf{+1.8} \\
+\textbf{Mean} & \textbf{2.6} & \textbf{2.4} & \textbf{+0.3} & \textbf{4.3} & \textbf{3.1} & \textbf{+1.1} & \textbf{7.0} & \textbf{3.9} & \textbf{+2.9} & \textbf{8.6} & \textbf{6.3} & \textbf{+4.0} & \textbf{7.6} & \textbf{5.3} & \textbf{+1.8} & \textbf{6.4} & \textbf{4.1} & \textbf{+1.9} \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
