--- a/tables_and_figures/output/rmse_anesrake_restricted_table.tex
+++ b/tables_and_figures/output/rmse_anesrake_restricted_table.tex
@@ -8,7 +8,7 @@
 \toprule
 Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Mean \\
 \midrule
-\multicolumn{11}{l}{\textit{Unweighted RMSE (\%)}} \\
+\multicolumn{11}{l}{\textit{Matching-Only RMSE (\%)}} \\
 \addlinespace[0.2em]
 ~~State Representative & 7.1 & 5.4 & 6.2 & 5.7 & 8.7 & 8.6 & 12.2 & 13.7 & 13.6 & 9.0 \\
 ~~State Senator & 10.1 & 5.9 & 9.6 & 8.0 & 15.3 & 9.3 & 7.8 & 13.3 & 16.0 & 10.6 \\
