--- a/tables_and_figures/output/rmse_matching_only.tex
+++ b/tables_and_figures/output/rmse_matching_only.tex
@@ -1,54 +1,54 @@
 \begin{table}[!htbp]
 \centering
 \footnotesize
-\caption{Matching Only RMSE by Variable and Year}
+\caption{Matching-Only RMSE by Variable and Year}
 \label{tab:rmse_matching_only}
 \begin{threeparttable}
 \begin{tabular}{lcccccccccc}
-\midrule
-\midrule
+\toprule
 Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Yearly Mean \\
 \midrule
 \multicolumn{11}{l}{\textit{Demographic}} \\
 \addlinespace[0.2em]
-~~Age Group & 4.6 & 3.8 & 9.6 & 8.0 & 5.7 & 6.1 & 5.1 & 4.6 & 4.5 &  \\
-~~Sex & 4.9 & 5.4 & 3.5 & 3.6 & 3.9 & 5.8 & 5.0 & 5.9 & 5.2 &  \\
-~~Hispanic Origin & - & - & 7.3 & 8.3 & 7.8 & 7.6 & 8.3 & 8.1 & 4.6 &  \\
-~~Education & 5.5 & 3.8 & 13.8 & 7.7 & 4.9 & 7.2 & 6.1 & 6.0 & 6.9 &  \\
-~~Family Income & 4.3 & 3.8 & 5.2 & 3.4 & 3.3 & 4.2 & 4.1 & 5.0 & 7.1 &  \\
-~~Employment Status & 10.5 & 6.8 & 10.3 & 15.3 & 12.1 & 10.0 & 11.5 & 11.0 & 9.7 &  \\
-~~Union Membership & 5.6 & 3.7 & 5.5 & 5.5 & 5.3 & 5.0 & 5.1 & 5.7 & 4.9 &  \\
-~~Veteran Status & 8.3 & 6.8 & 10.7 & 8.9 & 6.5 & 5.2 & 4.9 & 3.8 & 4.1 &  \\
-~~Residence Duration & - & 4.6 & 9.0 & 7.8 & 4.5 & 4.9 & - & 3.7 & - &  \\
+~~Age Group & 4.6 & 3.8 & 9.6 & 8.0 & 5.7 & 6.1 & 5.1 & 4.6 & 4.5 & 5.8 \\
+~~Sex & 4.9 & 5.4 & 3.5 & 3.6 & 3.9 & 5.8 & 5.0 & 5.9 & 5.2 & 4.8 \\
+~~Hispanic Origin & - & - & 7.3 & 8.3 & 7.8 & 7.6 & 8.3 & 8.1 & 4.6 & 7.4 \\
+~~Education & 5.5 & 3.8 & 13.8 & 7.7 & 4.9 & 7.2 & 6.1 & 6.0 & 6.9 & 6.9 \\
+~~Family Income & 4.3 & 3.8 & 5.2 & 3.4 & 3.3 & 4.2 & 4.1 & 5.0 & 7.1 & 4.5 \\
+~~Employment Status & 10.5 & 6.8 & 10.3 & 15.3 & 12.1 & 10.0 & 11.5 & 11.0 & 9.7 & 10.8 \\
+~~Union Membership & 5.6 & 3.7 & 5.5 & 5.5 & 5.3 & 5.0 & 5.1 & 5.7 & 4.9 & 5.1 \\
+~~Veteran Status & 8.3 & 6.8 & 10.7 & 8.9 & 6.5 & 5.2 & 4.9 & 3.8 & 4.1 & 6.6 \\
+~~Residence Duration & - & 4.6 & 9.0 & 7.8 & 4.5 & 4.9 & - & 3.7 & - & 5.8 \\
 \addlinespace[0.1em]
 {\fontseries{sb}\selectfont\textcolor{black!85}{~~Demographic Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{4.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{5.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{6.4}} \\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textit{Voting Administration}} \\
 \addlinespace[0.2em]
-~~Voting Turnout & 47.3 & 30.1 & 43.7 & 37.7 & 43.3 & 35.3 & 40.2 & 30.7 & 40.1 &  \\
-~~Voting Method & 4.3 & 3.8 & 4.6 & 6.0 & 3.7 & 5.1 & 4.9 & 8.3 & 7.7 &  \\
+~~Voting Turnout & 47.3 & 30.1 & 43.7 & 37.7 & 43.3 & 35.3 & 40.2 & 30.7 & 40.1 & 38.7 \\
+~~Voting Method & 4.3 & 3.8 & 4.6 & 6.0 & 3.7 & 5.1 & 4.9 & 8.3 & 7.7 & 5.4 \\
 \addlinespace[0.1em]
 {\fontseries{sb}\selectfont\textcolor{black!85}{~~Voting Administration Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{25.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{17.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{24.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{21.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{23.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{20.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{22.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{19.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{23.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{22.0}} \\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textit{Candidate Choice}} \\
 \addlinespace[0.2em]
-~~President & - & 5.8 & - & 4.4 & - & 8.1 & - & 10.0 & - &  \\
-~~U.S. Senate & 13.6 & 11.0 & 7.1 & 4.2 & 7.3 & 7.3 & 10.1 & 10.3 & 10.4 &  \\
-~~U.S. House & 4.3 & 10.6 & 9.3 & 7.7 & 8.5 & 8.0 & 9.4 & 10.1 & 11.4 &  \\
-~~Governor & 4.9 & 4.8 & 5.8 & 2.8 & 5.1 & 7.1 & 6.5 & 10.9 & 10.9 &  \\
-~~Attorney General & 12.3 & - & 12.6 & 15.4 & 9.3 & 6.5 & 7.8 & 11.3 & 12.8 &  \\
-~~Secretary of State & 11.5 & - & 6.7 & 9.7 & 9.1 & 10.0 & 7.9 & 11.1 & 12.4 &  \\
-~~State Senator & 10.1 & 5.9 & 9.6 & 8.0 & 15.3 & 9.3 & 7.8 & 13.3 & 16.0 &  \\
-~~State Representative & 7.1 & 5.4 & 6.2 & 5.7 & 8.7 & 8.6 & 12.2 & 13.7 & 13.6 &  \\
+~~President & - & 5.8 & - & 4.4 & - & 8.1 & - & 10.0 & - & 7.1 \\
+~~U.S. Senate & 13.6 & 11.0 & 7.1 & 4.2 & 7.3 & 7.3 & 10.1 & 10.3 & 10.4 & 9.0 \\
+~~U.S. House & 4.3 & 10.6 & 9.3 & 7.7 & 8.5 & 8.0 & 9.4 & 10.1 & 11.4 & 8.8 \\
+~~Governor & 4.9 & 4.8 & 5.8 & 2.8 & 5.1 & 7.1 & 6.5 & 10.9 & 10.9 & 6.5 \\
+~~Attorney General & 12.3 & - & 12.6 & 15.4 & 9.3 & 6.5 & 7.8 & 11.3 & 12.8 & 11.0 \\
+~~Secretary of State & 11.5 & - & 6.7 & 9.7 & 9.1 & 10.0 & 7.9 & 11.1 & 12.4 & 9.8 \\
+~~State Senator & 10.1 & 5.9 & 9.6 & 8.0 & 15.3 & 9.3 & 7.8 & 13.3 & 16.0 & 10.6 \\
+~~State Representative & 7.1 & 5.4 & 6.2 & 5.7 & 8.7 & 8.6 & 12.2 & 13.7 & 13.6 & 9.0 \\
 \addlinespace[0.1em]
 {\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{9.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{7.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{9.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{8.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{11.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{12.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{9.1}} \\
 \midrule
 \textbf{Yearly RMSE} & \textbf{9.9} & \textbf{7.3} & \textbf{10.0} & \textbf{9.0} & \textbf{9.1} & \textbf{8.5} & \textbf{9.2} & \textbf{9.7} & \textbf{10.7} & \textbf{9.3} \\
+\textbf{Yearly RMSE (excl. Turnout)} & \textbf{8.1} & \textbf{6.2} & \textbf{8.5} & \textbf{8.1} & \textbf{7.8} & \textbf{7.2} & \textbf{7.7} & \textbf{9.1} & \textbf{9.6} & \textbf{8.0} \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} All values are RMSE in percentage points.
+\item - indicates CES did not measure vote choice for that office that year.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
