--- a/tables_and_figures/output/rmse_ces_weighted_all.tex
+++ b/tables_and_figures/output/rmse_ces_weighted_all.tex
@@ -5,8 +5,7 @@
 \label{tab:rmse_ces_weighted_all}
 \begin{threeparttable}
 \begin{tabular}{lccccccccccc}
-\midrule
-\midrule
+\toprule
 Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Mean & SD \\
 \midrule
 \multicolumn{12}{l}{\textit{Demographic}} \\
