--- a/tables_and_figures/output/rmse_delta.tex
+++ b/tables_and_figures/output/rmse_delta.tex
@@ -1,54 +1,83 @@
 \begin{table}[!htbp]
 \centering
 \footnotesize
-\caption{Delta: Matching Only $-$ (Matching + Post-Stratification)}
+\caption{Difference in RMSE Between Matching-Only and Matching + Post-Stratification}
 \label{tab:rmse_delta}
 \begin{threeparttable}
 \begin{tabular}{lcccccccccc}
-\midrule
-\midrule
+\toprule
 Variable & 2006 & 2008 & 2010 & 2012 & 2014 & 2016 & 2018 & 2020 & 2022 & Yearly Mean \\
+\midrule
+\multicolumn{11}{c}{\textbf{Primary Variables -- Used to Construct CES Weights}} \\
 \midrule
 \multicolumn{11}{l}{\textit{Demographic}} \\
 \addlinespace[0.2em]
-~~Age Group & -2.3 & +0.5 & +4.8 & +5.2 & +2.9 & +3.5 & +1.1 & -0.1 & -0.7 &  \\
-~~Sex & -0.2 & -1.4 & -1.5 & +2.1 & +1.9 & +4.4 & +2.2 & +3.5 & +2.1 &  \\
-~~Hispanic Origin & - & - & -0.3 & +0.2 & +0.3 & -0.0 & +0.5 & +1.1 & +1.8 &  \\
-~~Education & -7.5 & +0.6 & +7.6 & +4.2 & +1.0 & +1.5 & +1.7 & +1.4 & +3.2 &  \\
-~~Family Income & -0.2 & +0.3 & +1.3 & -0.5 & -1.2 & -0.7 & -1.2 & -1.8 & -1.7 &  \\
-~~Employment Status & +3.6 & -3.5 & -0.2 & +1.8 & +0.5 & -2.0 & -0.8 & -1.4 & -0.4 &  \\
-~~Union Membership & +0.2 & -0.0 & -0.2 & -0.5 & +0.2 & -0.3 & -0.8 & -0.7 & -0.6 &  \\
-~~Veteran Status & +3.7 & +2.5 & +5.8 & +4.9 & +2.3 & +1.4 & +2.2 & +1.2 & +1.2 &  \\
-~~Residence Duration & - & -2.3 & +1.6 & +3.0 & -0.2 & -0.1 & - & -0.7 & - &  \\
+~~Age Group & - & +0.5 & +4.8 & +5.2 & +2.9 & +3.5 & +1.1 & -0.1 & -0.7 & +2.1 \\
+~~Sex & - & -1.4 & -1.5 & +2.1 & +1.9 & +4.4 & +2.2 & +3.5 & +2.1 & +1.7 \\
+~~Education & - & +0.6 & +7.6 & +4.2 & +1.0 & +1.5 & +1.7 & +1.4 & +3.2 & +2.7 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont\textcolor{black!85}{~~Demographic Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.8}} \\
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Demographic Avg.}} & - & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+3.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+3.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+3.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.1}} \\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textit{Voting Administration}} \\
 \addlinespace[0.2em]
-~~Voting Turnout & +3.5 & +4.2 & +12.1 & -1.0 & -3.8 & -1.3 & +5.1 & +4.3 & -8.1 &  \\
-~~Voting Method & +0.5 & -0.5 & -1.4 & +1.5 & +0.3 & -0.3 & -0.1 & +1.5 & +1.6 &  \\
+~~Voting Turnout & - & +4.2 & +12.1 & -1.0 & - & - & - & - & - & +5.1 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont\textcolor{black!85}{~~Voting Administration Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+5.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-1.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-3.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.0}} \\
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Voting Administration Avg.}} & - & {\fontseries{sb}\selectfont\textcolor{black!85}{+4.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+12.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-1.0}} & - & - & - & - & - & {\fontseries{sb}\selectfont\textcolor{black!85}{+5.1}} \\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textit{Candidate Choice}} \\
 \addlinespace[0.2em]
-~~President & - & +2.3 & - & +1.5 & - & +6.4 & - & +7.7 & - &  \\
-~~U.S. Senate & -0.1 & +1.1 & +1.9 & +1.9 & +1.0 & +3.3 & +1.6 & +4.8 & +3.1 &  \\
-~~U.S. House & -0.7 & +1.2 & -2.1 & -2.1 & -0.5 & -1.6 & -0.1 & +2.1 & +1.3 &  \\
-~~Governor & -0.0 & +0.1 & +2.3 & -0.6 & +1.5 & +3.1 & +2.1 & +6.6 & +5.1 &  \\
-~~Attorney General & -0.9 & - & +0.7 & +0.3 & +1.3 & +1.6 & +3.0 & +7.8 & +5.3 &  \\
-~~Secretary of State & +0.3 & - & +0.3 & -1.2 & +0.8 & +0.4 & +3.7 & +7.5 & +5.9 &  \\
-~~State Senator & -0.6 & +0.3 & +0.0 & +0.6 & +1.8 & +1.4 & +3.0 & +6.7 & +5.9 &  \\
-~~State Representative & -0.3 & +0.5 & +0.8 & -0.7 & +2.4 & +2.1 & +1.0 & +4.8 & +4.5 &  \\
+~~President & - & - & - & - & - & - & - & +7.7 & - & +7.7 \\
+~~U.S. Senate & - & - & - & - & +1.0 & +3.3 & +1.6 & +4.8 & +3.1 & +2.8 \\
+~~Governor & - & - & - & - & +1.5 & +3.1 & +2.1 & +6.6 & +5.1 & +3.7 \\
 \addlinespace[0.1em]
-{\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+6.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+4.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.9}} \\
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & - & - & - & - & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+3.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+6.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+4.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+3.3}} \\
+\addlinespace[0.3em]
 \midrule
-\textbf{Yearly Delta} & \textbf{-0.1} & \textbf{+0.4} & \textbf{+1.9} & \textbf{+1.1} & \textbf{+0.7} & \textbf{+1.2} & \textbf{+1.4} & \textbf{+3.0} & \textbf{+1.7} & \textbf{+1.3} \\
+\textbf{Yearly Delta} & - & \textbf{+1.0} & \textbf{+5.7} & \textbf{+2.6} & \textbf{+1.7} & \textbf{+3.2} & \textbf{+1.7} & \textbf{+4.0} & \textbf{+2.5} & \textbf{+2.8} \\
+\midrule
+\multicolumn{11}{c}{\textbf{Secondary Variables -- Not Used to Construct CES Weights}} \\
+\midrule
+\multicolumn{11}{l}{\textit{Demographic}} \\
+\addlinespace[0.2em]
+~~Age Group & -2.3 & - & - & - & - & - & - & - & - & -2.3 \\
+~~Sex & -0.2 & - & - & - & - & - & - & - & - & -0.2 \\
+~~Hispanic Origin & - & - & -0.3 & +0.2 & +0.3 & -0.0 & +0.5 & +1.1 & +1.8 & +0.5 \\
+~~Education & -7.5 & - & - & - & - & - & - & - & - & -7.5 \\
+~~Family Income & -0.2 & +0.3 & +1.3 & -0.5 & -1.2 & -0.7 & -1.2 & -1.8 & -1.7 & -0.6 \\
+~~Employment Status & +3.6 & -3.5 & -0.2 & +1.8 & +0.5 & -2.0 & -0.8 & -1.4 & -0.4 & -0.3 \\
+~~Union Membership & +0.2 & -0.0 & -0.2 & -0.5 & +0.2 & -0.3 & -0.8 & -0.7 & -0.6 & -0.3 \\
+~~Veteran Status & +3.7 & +2.5 & +5.8 & +4.9 & +2.3 & +1.4 & +2.2 & +1.2 & +1.2 & +2.8 \\
+~~Residence Duration & - & -2.3 & +1.6 & +3.0 & -0.2 & -0.1 & - & -0.7 & - & +0.2 \\
+\addlinespace[0.1em]
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Demographic Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.2}} \\
+\addlinespace[0.3em]
+\multicolumn{11}{l}{\textit{Voting Administration}} \\
+\addlinespace[0.2em]
+~~Voting Turnout & +3.5 & - & - & - & -3.8 & -1.3 & +5.1 & +4.3 & -8.1 & -0.1 \\
+~~Voting Method & +0.5 & -0.5 & -1.4 & +1.5 & +0.3 & -0.3 & -0.1 & +1.5 & +1.6 & +0.4 \\
+\addlinespace[0.1em]
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Voting Administration Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-1.4}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-1.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.5}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-3.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.1}} \\
+\addlinespace[0.3em]
+\multicolumn{11}{l}{\textit{Candidate Choice}} \\
+\addlinespace[0.2em]
+~~President & - & +2.3 & - & +1.5 & - & +6.4 & - & - & - & +3.4 \\
+~~U.S. Senate & -0.1 & +1.1 & +1.9 & +1.9 & - & - & - & - & - & +1.2 \\
+~~U.S. House & -0.7 & +1.2 & -2.1 & -2.1 & -0.5 & -1.6 & -0.1 & +2.1 & +1.3 & -0.3 \\
+~~Governor & -0.0 & +0.1 & +2.3 & -0.6 & - & - & - & - & - & +0.4 \\
+~~Attorney General & -0.9 & - & +0.7 & +0.3 & +1.3 & +1.6 & +3.0 & +7.8 & +5.3 & +2.4 \\
+~~Secretary of State & +0.3 & - & +0.3 & -1.2 & +0.8 & +0.4 & +3.7 & +7.5 & +5.9 & +2.2 \\
+~~State Senator & -0.6 & +0.3 & +0.0 & +0.6 & +1.8 & +1.4 & +3.0 & +6.7 & +5.9 & +2.1 \\
+~~State Representative & -0.3 & +0.5 & +0.8 & -0.7 & +2.4 & +2.1 & +1.0 & +4.8 & +4.5 & +1.7 \\
+\addlinespace[0.1em]
+{\fontseries{sb}\selectfont\textcolor{black!85}{~~Candidate Choice Avg.}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.3}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.9}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+0.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{-0.0}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.2}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.7}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+2.1}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+5.8}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+4.6}} & {\fontseries{sb}\selectfont\textcolor{black!85}{+1.8}} \\
+\addlinespace[0.3em]
+\midrule
+\textbf{Yearly Delta} & \textbf{-0.1} & \textbf{+0.2} & \textbf{+0.7} & \textbf{+0.7} & \textbf{+0.3} & \textbf{+0.5} & \textbf{+1.3} & \textbf{+2.5} & \textbf{+1.4} & \textbf{+0.8} \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item \textit{Note:} Delta = Matching Only $-$ (Matching + Post-Stratification). Positive values indicate matching-only had greater error (post-stratification improved accuracy). All values in percentage points.
+\item \textit{Note:} Positive values indicate matching-only had greater error (post-stratification improved accuracy). CES 2006 documentation does not specify which variables were used for post-stratification, so all variables are assumed Secondary for that year.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
