--- a/tables_and_figures/output/rmse_trend_tests.tex
+++ b/tables_and_figures/output/rmse_trend_tests.tex
@@ -1,29 +1,29 @@
 \begin{table}[!htbp]
 \centering
-\caption{RMSE Trend Analysis: Statistical Tests}
+\caption{Secondary Variable RMSE Trends Over Time}
 \label{tab:rmse_trend_tests}
 \begin{threeparttable}
 \begin{tabular}{lcccc}
 \toprule
 Model & $\beta$ & SE & $p$-value & Perm. $p$ \\
 \midrule
-\multicolumn{5}{l}{\textit{Panel A: Simple OLS by Class}} \\
+\multicolumn{5}{l}{\textit{Panel A: Fixed Effects Model}} \\
+\addlinespace[0.2em]
+~~Variable FE & 0.0969* & 0.0437 & 0.027 & 0.004 \\
+\addlinespace[0.3em]
+\multicolumn{5}{l}{\textit{Panel B: Simple OLS by Class}} \\
 \addlinespace[0.2em]
 ~~Demographic & 0.0890** & 0.0232 & 0.006 & -- \\
 ~~Voting Administration & 0.1272 & 0.0608 & 0.075 & -- \\
 ~~Candidate Choice & 0.0974 & 0.0575 & 0.134 & -- \\
 ~~Overall & 0.0969** & 0.0251 & 0.006 & -- \\
-\addlinespace[0.3em]
-\multicolumn{5}{l}{\textit{Panel B: Fixed Effects Model}} \\
-\addlinespace[0.2em]
-~~Variable FE & 0.0969* & 0.0437 & 0.027 & 0.004 \\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
 \item \textit{Note:} $\beta$ represents the change in RMSE (percentage points) per year.
-\item Panel A reports simple OLS regressions of RMSE on year, separately by class and overall.
-\item Panel B reports OLS with variable fixed effects (controls for 8 variables).
+\item Panel A reports OLS with variable fixed effects, controlling for baseline differences between 8 consistently Secondary variables.
+\item Panel B reports simple OLS regressions of mean RMSE on year, separately by variable class.
 \item Robust standard errors (HC3) used for all models. Permutation $p$-value based on 10,000 permutations.
 \item * $p<0.05$, ** $p<0.01$, *** $p<0.001$
 \end{tablenotes}
